[gd_scene load_steps=2 format=3 uid="uid://bgsmsqcvmqhfd"]

[ext_resource type="Script" uid="uid://2svkbovrdjn1" path="res://scenes/computer_info/file_system/file_system.gd" id="1_53lwl"]

[node name="FileSystem" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53lwl")
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="FileSystemLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "File System"

[node name="FileSystemTree" type="Tree" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="FileDetailsContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="FileDetailsLabel" type="Label" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2
text = "File Details"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2

[node name="FileNameContainer" type="HBoxContainer" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/FileDetailsContainer/FileNameContainer"]
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
text = "File Name:"

[node name="FileNameLineEdit" type="LineEdit" parent="HBoxContainer/FileDetailsContainer/FileNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="IsBinaryCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Binary File"

[node name="IsAllowImportCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Allow Import"

[node name="IsEditedOtherPlayerCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Edited Other Player"

[node name="IsSavedCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Saved"

[node name="IsProtectedCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Protected"

[node name="IsDefaultContentCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Protected"

[node name="OwnerContainer" type="HBoxContainer" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/FileDetailsContainer/OwnerContainer"]
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
text = "Owner:"

[node name="FileOwnerLineEdit" type="LineEdit" parent="HBoxContainer/FileDetailsContainer/OwnerContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="GroupContainer" type="HBoxContainer" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/FileDetailsContainer/GroupContainer"]
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
text = "Group:"

[node name="FileGroupLineEdit" type="LineEdit" parent="HBoxContainer/FileDetailsContainer/GroupContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2

[node name="PermissionsNameContainer" type="HBoxContainer" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2

[node name="OwnerLabel" type="Label" parent="HBoxContainer/FileDetailsContainer/PermissionsNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Owner"
horizontal_alignment = 1

[node name="GroupLabel" type="Label" parent="HBoxContainer/FileDetailsContainer/PermissionsNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Group"
horizontal_alignment = 1

[node name="OtherLabel" type="Label" parent="HBoxContainer/FileDetailsContainer/PermissionsNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Others"
horizontal_alignment = 1

[node name="PermissionsContainer" type="HBoxContainer" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2
alignment = 1

[node name="OwRCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OwWCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OwXCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GrRCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GrWCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GrXCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OtRCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OtWCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OtXCheckBox" type="CheckBox" parent="HBoxContainer/FileDetailsContainer/PermissionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/FileDetailsContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PathLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "/"

[node name="ViewAsContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="ViewAsLabel" type="Label" parent="HBoxContainer/VBoxContainer2/ViewAsContainer"]
layout_mode = 2
text = "View as:"

[node name="ViewAsOptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer2/ViewAsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewAsButton" type="Button" parent="HBoxContainer/VBoxContainer2/ViewAsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open"

[node name="ContentCodeEdit" type="CodeEdit" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
scroll_smooth = true
minimap_draw = true
caret_blink = true
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
line_folding = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="FileDetails" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="FileIdLabel" type="Label" parent="HBoxContainer/VBoxContainer2/FileDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "File ID:"
text_overrun_behavior = 3

[node name="FileRefCountLabel" type="Label" parent="HBoxContainer/VBoxContainer2/FileDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "References Count: 0"
